--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,83 +1,38 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
+@inproceedings{jabon2022dispersion,
+  title={Dispersion-compensated microring photon pair source design with configurable purity--pair rate--heralding efficiency tradeoff},
+  author={Jabon, Kenneth M and Wang, Imbert and Popovi{\'c}, Milo{\v{s}} A},
+  booktitle={2022 Conference on Lasers and Electro-Optics (CLEO)},
+  pages={1--2},
+  year={2022},
+  organization={IEEE}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{timurdogan2020400g,
+  title={400G silicon photonics integrated circuit transceiver chipsets for CPO, OBO, and pluggable modules},
+  author={Timurdogan, Erman and Su, Zhan and Shiue, Ren-Jye and Byrd, Matthew J and Poulton, Christopher V and Jabon, Kenneth and DeRose, Christopher and Moss, Benjamin R and Hosseini, Ehsan S and Duzevik, Ivan and others},
+  booktitle={Optical Fiber Communication Conference},
+  pages={T3H--2},
+  year={2020},
+  organization={Optica Publishing Group}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  selected={true}
+@inproceedings{gao2022passive,
+  title={Passive 1$\times$ 32 Multiplexer with 200GHz Channel Spacing in Silicon Photonics},
+  author={Gao, Yun and Brightly, Scott and Zheng, Jiajiu and Shiue, Ren-Jye and Jabon, Kenneth M and Poulton, Christopher V and Timurdogan, Erman and Watts, Michael R},
+  booktitle={CLEO: Science and Innovations},
+  pages={STh4P--5},
+  year={2022},
+  organization={Optica Publishing Group}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{jabon2021edge,
+  title={Edge-Coupled Active and Passive Wafer-Scale Measurements on 300mm Silicon Photonics Wafers},
+  author={Jabon, Kenneth M and Poulton, Christopher V and Shiue, Ren-Jye and Byrd, Matthew J and Su, Zhan and Teimourpour, Mohammad H and Breitenstein, Scott and Millman, Ronald P and Atlas, Dogan and Watts, Michael R and others},
+  booktitle={Optical Fiber Communication Conference},
+  pages={M3A--1},
+  year={2021},
+  organization={Optica Publishing Group}
 }
