--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,7 @@
-@inproceedings{jabon2022dispersion,
+---
+---
+
+@article{jabon2022dispersion,
   title={Dispersion-compensated microring photon pair source design with configurable purity--pair rate--heralding efficiency tradeoff},
   author={Jabon, Kenneth M and Wang, Imbert and Popovi{\'c}, Milo{\v{s}} A},
   booktitle={2022 Conference on Lasers and Electro-Optics (CLEO)},
