--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,38 +10,38 @@
   preview={brownian-motion.gif}
 }
 
-@article{jabon2022dispersion,
-  title={Dispersion-compensated microring photon pair source design with configurable purity--pair rate--heralding efficiency tradeoff},
-  author={Jabon, Kenneth M and Wang, Imbert and Popovi{\'c}, Milo{\v{s}} A},
-  booktitle={2022 Conference on Lasers and Electro-Optics (CLEO)},
-  pages={1--2},
-  year={2022},
-  organization={IEEE}
-}
+% @article{jabon2022dispersion,
+%   title={Dispersion-compensated microring photon pair source design with configurable purity--pair rate--heralding efficiency tradeoff},
+%   author={Jabon, Kenneth M and Wang, Imbert and Popovi{\'c}, Milo{\v{s}} A},
+%   booktitle={2022 Conference on Lasers and Electro-Optics (CLEO)},
+%   pages={1--2},
+%   year={2022},
+%   organization={IEEE}
+% }
 
-@inproceedings{timurdogan2020400g,
-  title={400G silicon photonics integrated circuit transceiver chipsets for CPO, OBO, and pluggable modules},
-  author={Timurdogan, Erman and Su, Zhan and Shiue, Ren-Jye and Byrd, Matthew J and Poulton, Christopher V and Jabon, Kenneth and DeRose, Christopher and Moss, Benjamin R and Hosseini, Ehsan S and Duzevik, Ivan and others},
-  booktitle={Optical Fiber Communication Conference},
-  pages={T3H--2},
-  year={2020},
-  organization={Optica Publishing Group}
-}
+% @inproceedings{timurdogan2020400g,
+%   title={400G silicon photonics integrated circuit transceiver chipsets for CPO, OBO, and pluggable modules},
+%   author={Timurdogan, Erman and Su, Zhan and Shiue, Ren-Jye and Byrd, Matthew J and Poulton, Christopher V and Jabon, Kenneth and DeRose, Christopher and Moss, Benjamin R and Hosseini, Ehsan S and Duzevik, Ivan and others},
+%   booktitle={Optical Fiber Communication Conference},
+%   pages={T3H--2},
+%   year={2020},
+%   organization={Optica Publishing Group}
+% }
 
-@inproceedings{gao2022passive,
-  title={Passive 1$\times$ 32 Multiplexer with 200GHz Channel Spacing in Silicon Photonics},
-  author={Gao, Yun and Brightly, Scott and Zheng, Jiajiu and Shiue, Ren-Jye and Jabon, Kenneth M and Poulton, Christopher V and Timurdogan, Erman and Watts, Michael R},
-  booktitle={CLEO: Science and Innovations},
-  pages={STh4P--5},
-  year={2022},
-  organization={Optica Publishing Group}
-}
+% @inproceedings{gao2022passive,
+%   title={Passive 1$\times$ 32 Multiplexer with 200GHz Channel Spacing in Silicon Photonics},
+%   author={Gao, Yun and Brightly, Scott and Zheng, Jiajiu and Shiue, Ren-Jye and Jabon, Kenneth M and Poulton, Christopher V and Timurdogan, Erman and Watts, Michael R},
+%   booktitle={CLEO: Science and Innovations},
+%   pages={STh4P--5},
+%   year={2022},
+%   organization={Optica Publishing Group}
+% }
 
-@inproceedings{jabon2021edge,
-  title={Edge-Coupled Active and Passive Wafer-Scale Measurements on 300mm Silicon Photonics Wafers},
-  author={Jabon, Kenneth M and Poulton, Christopher V and Shiue, Ren-Jye and Byrd, Matthew J and Su, Zhan and Teimourpour, Mohammad H and Breitenstein, Scott and Millman, Ronald P and Atlas, Dogan and Watts, Michael R and others},
-  booktitle={Optical Fiber Communication Conference},
-  pages={M3A--1},
-  year={2021},
-  organization={Optica Publishing Group}
-}
+% @inproceedings{jabon2021edge,
+%   title={Edge-Coupled Active and Passive Wafer-Scale Measurements on 300mm Silicon Photonics Wafers},
+%   author={Jabon, Kenneth M and Poulton, Christopher V and Shiue, Ren-Jye and Byrd, Matthew J and Su, Zhan and Teimourpour, Mohammad H and Breitenstein, Scott and Millman, Ronald P and Atlas, Dogan and Watts, Michael R and others},
+%   booktitle={Optical Fiber Communication Conference},
+%   pages={M3A--1},
+%   year={2021},
+%   organization={Optica Publishing Group}
+% }
