--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,14 +1,14 @@
 ---
 ---
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
-}
+% @book{einstein1956investigations,
+%   bibtex_show={true},
+%   title={Investigations on the Theory of the Brownian Movement},
+%   author={Einstein, Albert},
+%   year={1956},
+%   publisher={Courier Corporation,},
+%   preview={brownian-motion.gif}
+% }
 
 @article{jabon2022dispersion,
   title={Dispersion-compensated microring photon pair source design with configurable purity--pair rate--heralding efficiency tradeoff},
