--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,23 +1,23 @@
 ---
 ---
 
-% @book{einstein1956investigations,
-%   bibtex_show={true},
-%   title={Investigations on the Theory of the Brownian Movement},
-%   author={Einstein, Albert},
-%   year={1956},
-%   publisher={Courier Corporation,},
-%   preview={brownian-motion.gif}
-% }
-
-@article{jabon2022dispersion,
-  title={Dispersion-compensated microring photon pair source design with configurable purity--pair rate--heralding efficiency tradeoff},
-  author={Jabon, Kenneth M and Wang, Imbert and Popovi{\'c}, Milo{\v{s}} A},
-  booktitle={2022 Conference on Lasers and Electro-Optics (CLEO)},
-  pages={1--2},
-  year={2022},
-  organization={IEEE}
+@book{einstein1956investigations,
+  bibtex_show={true},
+  title={Investigations on the Theory of the Brownian Movement},
+  author={Einstein, Albert},
+  year={1956},
+  publisher={Courier Corporation,},
+  preview={brownian-motion.gif}
 }
+
+% @article{jabon2022dispersion,
+%   title={Dispersion-compensated microring photon pair source design with configurable purity--pair rate--heralding efficiency tradeoff},
+%   author={Jabon, Kenneth M and Wang, Imbert and Popovi{\'c}, Milo{\v{s}} A},
+%   booktitle={2022 Conference on Lasers and Electro-Optics (CLEO)},
+%   pages={1--2},
+%   year={2022},
+%   organization={IEEE}
+% }
 
 % @inproceedings{timurdogan2020400g,
 %   title={400G silicon photonics integrated circuit transceiver chipsets for CPO, OBO, and pluggable modules},
