--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,9 @@
   pages={1--2},
   year={2022},
   organization={IEEE},
-  preview={brownian-motion.gif}
+  preview={stitchedFullZoom.jpg},
+  pdf=microring.pdf,
+  abstract="We present a Si microring-based photon pair source design with tailored pump/signal/idler escape rates allowing configurable purity-rate-heralding tradeoffs, while maintaining efficiency through tunable dispersion compensation. We validate the subcomponents using stimulated FWM experiments."
 }
 
 @inproceedings{timurdogan2020400g,
@@ -35,5 +37,8 @@
   booktitle={Optical Fiber Communication Conference},
   pages={M3A--1},
   year={2021},
-  organization={Optica Publishing Group}
+  organization={Optica Publishing Group},
+  preview={coupler.jpg},
+  pdf=waferprober.pdf,
+  abstract={We perform wafer-scale measurements of silicon photonics components using broadband (100nm+) edge couplers and reflecting optical fiber probes for the first time. We demonstrate <1dB/cm waveguide loss and 25GHz+ micro-ring modulators on 300mm wafers.}
 }
