--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,10 @@
   organization={IEEE},
   preview={stitchedFullZoom.jpg},
   pdf=microring.pdf,
-  abstract="We present a Si microring-based photon pair source design with tailored pump/signal/idler escape rates allowing configurable purity-rate-heralding tradeoffs, while maintaining efficiency through tunable dispersion compensation. We validate the subcomponents using stimulated FWM experiments."
+  abstract="We present a Si microring-based photon pair source design with tailored pump/signal/idler escape rates allowing configurable purity-rate-heralding tradeoffs, while maintaining efficiency through tunable dispersion compensation. We validate the subcomponents using stimulated FWM experiments.",
+  blog="/blog/2023/SPS",
+  website="https://ieeexplore.ieee.org/document/9889950"
+  
 }
 
 @inproceedings{timurdogan2020400g,
@@ -40,5 +43,7 @@
   organization={Optica Publishing Group},
   preview={coupler.jpg},
   pdf=waferprober.pdf,
-  abstract={We perform wafer-scale measurements of silicon photonics components using broadband (100nm+) edge couplers and reflecting optical fiber probes for the first time. We demonstrate <1dB/cm waveguide loss and 25GHz+ micro-ring modulators on 300mm wafers.}
+  abstract={We perform wafer-scale measurements of silicon photonics components using broadband (100nm+) edge couplers and reflecting optical fiber probes for the first time. We demonstrate <1dB/cm waveguide loss and 25GHz+ micro-ring modulators on 300mm wafers.},
+  blog="/blog/2023/waferProber",
+  website="https://ieeexplore.ieee.org/document/9489584"
 }
