--- a/_posts/2018-12-22-SPS.md
+++ b/_posts/2018-12-22-SPS.md
@@ -1,7 +1,7 @@
 ---
 layout: distill
-title: CoachRL
-description: Forming good habits by following daily recommendations from a learning agent.
+title: SPS
+description: A tunable photon pair source for use in a linear-optic quantum computer.
 giscus_comments: true
 date: 2023-01-16
 
