--- a/_posts/2023-01-21-PRL.md
+++ b/_posts/2023-01-21-PRL.md
@@ -1,9 +1,9 @@
 ---
 layout: distill
-title: CoachRL
-description: Forming good habits by following daily recommendations from a learning agent.
+title: PRL
+description: Photonic device design by iterative simulations, optimized with RL.
 giscus_comments: true
-date: 2023-01-16
+date: 2023-01-21
 
 authors:
   - name: Kenneth Jabon
