--- a/_posts/2023-01-21-gamedev.md
+++ b/_posts/2023-01-21-gamedev.md
@@ -1,9 +1,9 @@
 ---
 layout: distill
-title: CoachRL
-description: Forming good habits by following daily recommendations from a learning agent.
+title: Game Dev
+description: Video game environments tuned by RL from human feedback.
 giscus_comments: true
-date: 2023-01-16
+date: 2023-01-21
 
 authors:
   - name: Kenneth Jabon
