Many blog posts

--- a/_posts/2018-12-22-SPS.md
+++ b/_posts/2018-12-22-SPS.md
@@ -3,6 +3,7 @@ layout: distill
 title: SPS
 description: A tunable photon pair source for use in a linear-optic quantum computer.
 giscus_comments: true
+tags: photonics
 date: 2023-01-16
 
 authors:
