--- a/_posts/2023-01-21-PRL.md
+++ b/_posts/2023-01-21-PRL.md
@@ -3,6 +3,7 @@ layout: distill
 title: PRL
 description: Photonic device design by iterative simulations, optimized with RL.
 giscus_comments: true
+tags: photonics rl
 date: 2023-01-21
 
 authors:
