--- a/_posts/2023-01-21-gamedev.md
+++ b/_posts/2023-01-21-gamedev.md
@@ -3,6 +3,7 @@ layout: distill
 title: Game Dev
 description: Video game environments tuned by RL from human feedback.
 giscus_comments: true
+tags: gamedev
 date: 2023-01-21
 
 authors:
