--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -1,8 +1,9 @@
 ---
 layout: distill
-title: CoachRL
-description: Forming good habits by following daily recommendations from a learning agent.
+title: Habits and Rewards
+description: Forming good habits is a lasting way to change your life.
 giscus_comments: true
+tags: habits
 date: 2023-01-16
 
 authors:
@@ -19,17 +20,24 @@ bibliography: 2018-12-22-distill.bib
 #   - we may want to automate TOC generation in the future using
 #     jekyll-toc plugin (https://github.com/toshimaru/jekyll-toc).
 toc:
-  - name: Equations
+  - name: Why habits?
+  - name: Tuning rewards
+  - name: Rewarding good behaviors
+  - name: Individual caveats
+  - name: Minimize all fun? Not so fast
+  - name: Balance in all things
+  #- name: Verbum ex machina
+  #- name: Equations
     # if a section has subsections, you can add them as follows:
     # subsections:
     #   - name: Example Child Subsection 1
     #   - name: Example Child Subsection 2
-  - name: Citations
-  - name: Footnotes
-  - name: Code Blocks
-  - name: Interactive Plots
-  - name: Layouts
-  - name: Other Typography?
+  #- name: Citations
+  #- name: Footnotes
+  #- name: Code Blocks
+  #- name: Interactive Plots
+  #- name: Layouts
+  #- name: Other Typography?
 
 # Below is an example of injecting additional post-specific styles.
 # If you use this post as a template, delete this _styles block.
@@ -51,295 +59,87 @@ _styles: >
 
 ---
 
+
+
+
 ## Why habits?
 
->We are what we repeatedly do. Excellence, therefore, is not an act but a habit.
+Stephen King is one of the most prolific writers of our time. How has he managed to write more than 60 novels, and sell more than 400 million copies? Consistent and sustainable effort. As he recounted in "On Writing," the vast majority of his books weren't the result of 16-hour sprints. He follows one rule: to write for 4 hours a day, every day, no exceptions, like a stream carving out a canyon through hard rock. 
 
--Will Durant, Historian
+{% include figure.html path="assets/img/onWriting.jpg" title="example" class="img-fluid rounded z-depth-1" %} 
+<div class="caption">
+    I highly recommend Stephen King's "On Writing." The lessons within are not writing-exclusive!
+</div>
 
+You likely agree that exercise, healthy eating, a consistent sleep schedule, and reading every day are all things we should be doing, and probably benefit the rest of our activities indirectly. 
 
-Stephen King is one of the most prolific writers of our time. How has he managed to write more than 60 novels, and sell more than 400 million copies? The answer is of course, consistent and sustainable effort. As he recounted in *On Writing,* (add a pic) the vast majority of his books weren't the result of 16-hour sprints or all-nighters. He makes it an unbreakable personal rule to write for 4 hours a day, every day, no exceptions. Simple, but powerful.
+## I hear you. Counterpoint: TV
 
-Everyone can agree that exercise, healthy eating, a consistent sleep schedule, and reading every day are all things we **should** be doing, and probably benefit the rest of our activities indirectly. There's much literature on tricks for forming good habits, like "hacking" cues that trigger certain behaviors. [James Clear](https://jamesclear.com/habits) has plenty to say on the subject, and following his advice is a great start.
+Waking up an hour early to get a run in? Gross. It's raining. How about some hot chocolate instead? Now add a fuzzy blanket and some X-Files. 
+{% include figure.html path="assets/img/kronk.gif" title="example" class="img-fluid rounded z-depth-1" %}
+If only we had someone around to say hey man, I know it's raining outside, and you're not even sure you want to get into this whole cardio thing. But I'm gonna make it worth your while. Go do that run for me, and you can watch as much X-Files as you want.
 
-## I hear you. Counterpoint: Skyrim
+Ok, sounds pretty good. But what if I'm a good little optimizer, and I want to form as many habits as possible in as short a time as possible, without burning myself out and falling off the wagon of every last thing in an endless loop? And what if I don't want to run every day: I just want to run two days a week, and go to the gym the other two, and maybe do hot yoga the other two? It sucks keeping track of all this stuff every day! And another thing! If I'm being rewarded with endless X-Files, how am I going to have time for anything beyond exercise and X-Files?
 
-Waking up an hour early to get a run in? Gross. It's raining. How about some hot chocolate instead? Now add a fuzzy blanket and some X-Files. Oh yeah. It's all coming together. (Insert Kronk meme here).
+Basically, use rewards (read on), and get organized [(next post)](/blog/2023/CoachRLHighLevel/).
 
-If **only** we had someone around to say hey man, I know it's raining outside, and you're not even sure you want to get into this whole cardio thing. But I'm gonna make it worth your while. Go do that run for me, and you can watch as much X-Files as you want.
+## Tuning rewards
 
-Ok, sounds pretty good. But what if I'm a good little optimizer, and I want to form as many habits as possible in as short a time as possible, without burning myself out and falling off the wagon of every last thing in an endless loop? And what if I don't want to run every day: I just want to run two days a week, and go to the gym the other two, and maybe do hot yoga the other two? It sucks keeping track of all this stuff every day! And another thing! If I'm being rewarded with endless Skyrim, how am I going to have time for anything beyond exercise and Skyrim?
+Now for the juicy part - and I mean that literally in the context of rewarding brain chemicals. For your typical person, running or writing a novel is not intrinsically rewarding, or at least it is less intrinsically rewarding than playing Skyrim.
+Until it becomes an automatic habit, you must reward yourself for doing it! This may sound a lot like [operant conditioning!](https://en.wikipedia.org/wiki/Operant_conditioning) This can be thought of very similarly to reinforcement learning. Put it to work for yourself and change your life.
 
-## Enter: CoachRL
-
-Alright, these complaints are relatable and valid. So let's automate them to oblivion! No more tedium of tracking and decision-making. Just a "**personal coach**" that tells you what to do and gives you a lil treat for doing it.
-
-This project started with a simple spreadsheet and turned into a daily personalized fortune-teller. First I'll go over the features and explain the reasoning behind them. Then I'll go over how to set it up for yourself. I'll describe the "under-the-hood" mechanics of the system in another post. (Hint: it uses reinforcement learning).
-
-**Ingredients**
-
-A Mac/Linux device. (Underlying libraries used do not currently run on Windows. I could, in principle, change this - let me know if you're interested in the comments below).
-
-A device on which you can install the messaging app Telegram; used for notifications and requesting "lil treats" for completing tasks.
-
-*Optional but recommended:* 
-
-A tablet of some form; for a daily to-do list without rewriting your routine every day. I use an iPad Pro with the Apple Pencil 2.
-
-An iPhone; is used for auto-weight tracking. (Currently uses iCloud to transfer things over, but again, this could be changed if interest.)
-
-**Disclaimer**
-
-It is not 100% automated, as that would make it too brittle to be worth setting up for your ever-changing goals. Furthermore, as the current user-base is a grand total of me, the setup is not quite a Apple-certified streamlined experience. If I sense a good amount of interest, there's a good chance I would make things easier for people! Let me know in the comments below, or leave a star on the [Github repo](github.com).
-
-## What that app do?
+Suppose you don't do this. Your determination and willpower will take a day (or week) off, and sure - maybe you'll get back on the bus, sooner or later. But relying on your own grit and available mind space is going to take longer, at best. It will leave you with less daily energy to apply to other things! Your work, hobbies, relationships, other habits - everything will suffer just a little bit. At worst, you'll find yourself in an endless cycle of trying to start running; things go well for a week, and then you burn yourself out with your enthusiasm, and then start all over again.
 
 
 
-This theme supports rendering beautiful math in inline and display modes using [MathJax 3](https://www.mathjax.org/) engine.
-You just need to surround your math expression with `$$`, like `$$ E = mc^2 $$`.
-If you leave it inside a paragraph, it will produce an inline expression, just like $$ E = mc^2 $$.
+## Rewarding good behaviors
+So, what's the mechanism we use here?
 
-To use display mode, again surround your expression with `$$` and place it as a separate paragraph.
-Here is an example:
+First, you have to come up with a set of rewards for yourself. What's your favorite thing to do? This can range from eating sugary treats, playing video games, to reading manga, to watching TV, to reading books, to reading about your favorite hobby, to playing a musical instrument, to cooking, and even to things like running and going to the gym, if that's a habit you've already formed. Whatever it happens to be, set those things aside as rewards.
+<div class="row">
 
-$$
-\left( \sum_{k=1}^n a_k b_k \right)^2 \leq \left( \sum_{k=1}^n a_k^2 \right) \left( \sum_{k=1}^n b_k^2 \right)
-$$
+<div class="col-sm">
+{% include figure.html path="assets/img/mineral.png" class="img-fluid rounded z-depth-1" %} 
+</div>
+</div>
+<div class="caption">
+    Find the mineral you crave, and use it as a reward.
+</div>
 
-Note that MathJax 3 is [a major re-write of MathJax](https://docs.mathjax.org/en/latest/upgrading/whats-new-3.0.html) that brought a significant improvement to the loading and rendering speed, which is now [on par with KaTeX](http://www.intmath.com/cg5/katex-mathjax-comparison.php).
+Now, every time you clear an item off of your daily to-do list, you request a reward from the Coach (more details in later posts). These rewards start out small (1-5 minutes). As previously mentioned, you don't want to spend your whole day watching TV as a nice reward for flossing in the morning. 
+
+As more items are completed, the rewards grow. As your willpower is depleted throughout the day, you'll find yourself making excuses not to tackle the next item on your list. Rewards grow throughout the day to counteract this effect, and keep you forming your habits for longer.
+
+## Individual caveats
+
+It is important to recognize that every individual has limits, which vary from person to person. Perhaps your work is particularly demanding, or your health has gotten away from you. Taking this into account, you should increase the amount of rewards you get for completing your tasks, and/or decrease the amount you're trying to accomplish. If you stick to it, habits will become more automatic, requiring less mental energy, and the amount of reward you need to keep it up will decrease over time. Now you have extra energy for the day. If you find yourself at the end of the day with plenty of extra energy, add a new habit, or deepen the goals for an existing one. As I alluded to earlier, perhaps you can instead convert an automatic habit you particularly enjoy (e.g. going for a run) into a reward. One can imagine this can have a compounding effect.
+
+It's helpful to me to categorize all kinds of habits as how "drug-like" they are. E.g., bingeing TV or video games, alcohol and caffeine intake, etc. These are things that you will necessarily gain (at least) a psychological tolerance to, and withdraw from if you stop. If these are minimized, not only do you have more time for other opportunities, but, anecdotally at least, I find I gain a greater mental acuity. I believe this is due to a greater amount of active [dopamine receptors](https://pubmed.ncbi.nlm.nih.gov/31905114/) in the brain. Flood the brain with dopamine via various drug-like activities, and to achieve homeostasis, the brain will reduce the amount of receptors to that particular reward. Tolerance to drug-like things is your brain's way of normalizing rewards. 
+
+If you actively minimize drug-like behaviors, this normalization will happen in the opposite direction, and instead of becoming like the typical drug addict for which normal life holds no interest, normal life will be intensely interesting! In this way, you have an innate motivation to seek rewards, and these rewards feel more rewarding! Conversely, we have "negative drugs," otherwise known as healthy living: exercise, healthy eating, and the like. Forming such habits will give you this same innate motivation.
+
+## Minimize all fun? Not so fast
+
+The willful optimizing reader may say: why not completely eliminate anything drug-like, and only live in a completely healthy fashion?
+
+I don't think the brain is designed to work this way; that is, with no rewards, or constant rewards. The brain's reward system is greedy. It always seeks to maximize rewards experienced, with as minimal effort as possible - unless there is a system in place to prevent this, e.g. a moral system, a value system, and their physical realizations/extensions. One may argue that these kinds of systems and organizations (personal principles, one's religion, political beliefs, family, the workplace) are simply different sources of rewards, with social or biological foundations themselves. Aside from a good book waiting for you at the end of the day, your reward may be seeing your values play out in the world, your children succeeding in their endeavors, flourishing relationships, a successful career, etc. 
+
+These sorts of things are intrinsic, and typically good and healthy. One may argue that if an individual has found sustainable ways to achieve all of  these kinds of long-term rewards, they're pretty much set for life. Maybe this is how many define success! But, perhaps you're not quite there yet to a sustainable, satisfying life. If you were satisfied and sustained, you probably wouldn't be reading this article. Let's continue with the assumption that you want to make a change.
+
+## Balance in all things
+
+Often these day-to-day, external, intrinsic rewards compete with other rewards in your life for your attention. It is not easy to encapsulate these kinds of rewards and use them as a treat for going out for a run. Furthermore, if you are not intentionally giving yourself a controllable kind of nugget in exchange for "going for a run," or whatever your goal habit may be, and doing so in a repeated, organized manner, your goal habits are all but guaranteed to fall by the wayside, and be consumed by more intrinsically rewarding things (drug-like things and base instinct).
+
+Maybe that's not so bad, depending on what your goals may be. For the purposes of this article, we'll assume you have a goal that is not intrinsically rewarding up front, as happens to be the case with many worthwhile things.
+Going back to our question: why not completely eliminate anything drug-like, and only live in a completely healthy fashion? Because if the nugget waiting for you on the other side of your task or goal isn't juicy enough, you're not going to form that habit. You're not going to train your brain the way you consciously desire, it will be trained by other, external factors. Too juicy, and risk being consumed by your reward. Not juicy enough, and risk being consumed by external factors and making no habitual progress.
+
+Play this balancing act with care; I recommend linearly ramping down rewards (starting high)/ ramping up your habit demands (starting low) until it's just a little hard - then maintaining this challenge level for awhile, seeing that you don't burn out, before making further perturbations.
+
 
 ***
 
-## Citations
+See the next article, on using CoachRL to put the above into action, [here](/blog/2023/CoachRLHighLevel/).
 
-Citations are then used in the article body with the `<d-cite>` tag.
-The key attribute is a reference to the id provided in the bibliography.
-The key attribute can take multiple ids, separated by commas.
+See the articles in this series [here](/blog/tag/habits/).
 
-The citation is presented inline like this: <d-cite key="gregor2015draw"></d-cite> (a number that displays more information on hover).
-If you have an appendix, a bibliography is automatically created and populated in it.
 
-Distill chose a numerical inline citation style to improve readability of citation dense articles and because many of the benefits of longer citations are obviated by displaying more information on hover.
-However, we consider it good style to mention author last names if you discuss something at length and it fits into the flow well — the authors are human and it’s nice for them to have the community associate them with their work.
-
-***
-
-## Footnotes
-
-Just wrap the text you would like to show up in a footnote in a `<d-footnote>` tag.
-The number of the footnote will be automatically generated.<d-footnote>This will become a hoverable footnote.</d-footnote>
-
-***
-
-## Code Blocks
-
-Syntax highlighting is provided within `<d-code>` tags.
-An example of inline code snippets: `<d-code language="html">let x = 10;</d-code>`.
-For larger blocks of code, add a `block` attribute:
-
-<d-code block language="javascript">
-  var x = 25;
-  function(x) {
-    return x * x;
-  }
-</d-code>
-
-**Note:** `<d-code>` blocks do not look good in the dark mode.
-You can always use the default code-highlight using the `highlight` liquid tag:
-
-{% highlight javascript %}
-var x = 25;
-function(x) {
-  return x * x;
-}
-{% endhighlight %}
-
-***
-
-## Interactive Plots
-
-You can add interative plots using plotly + iframes :framed_picture:
-
-<div class="l-page">
-  <iframe src="{{ '/assets/plotly/demo.html' | relative_url }}" frameborder='0' scrolling='no' height="500px" width="100%" style="border: 1px dashed grey;"></iframe>
-</div>
-
-The plot must be generated separately and saved into an HTML file.
-To generate the plot that you see above, you can use the following code snippet:
-
-{% highlight python %}
-import pandas as pd
-import plotly.express as px
-df = pd.read_csv(
-  'https://raw.githubusercontent.com/plotly/datasets/master/earthquakes-23k.csv'
-)
-fig = px.density_mapbox(
-  df,
-  lat='Latitude',
-  lon='Longitude',
-  z='Magnitude',
-  radius=10,
-  center=dict(lat=0, lon=180),
-  zoom=0,
-  mapbox_style="stamen-terrain",
-)
-fig.show()
-fig.write_html('assets/plotly/demo.html')
-{% endhighlight %}
-
-***
-
-## Layouts
-
-The main text column is referred to as the body.
-It is the assumed layout of any direct descendants of the `d-article` element.
-
-<div class="fake-img l-body">
-  <p>.l-body</p>
-</div>
-
-For images you want to display a little larger, try `.l-page`:
-
-<div class="fake-img l-page">
-  <p>.l-page</p>
-</div>
-
-All of these have an outset variant if you want to poke out from the body text a little bit.
-For instance:
-
-<div class="fake-img l-body-outset">
-  <p>.l-body-outset</p>
-</div>
-
-<div class="fake-img l-page-outset">
-  <p>.l-page-outset</p>
-</div>
-
-Occasionally you’ll want to use the full browser width.
-For this, use `.l-screen`.
-You can also inset the element a little from the edge of the browser by using the inset variant.
-
-<div class="fake-img l-screen">
-  <p>.l-screen</p>
-</div>
-<div class="fake-img l-screen-inset">
-  <p>.l-screen-inset</p>
-</div>
-
-The final layout is for marginalia, asides, and footnotes.
-It does not interrupt the normal flow of `.l-body` sized text except on mobile screen sizes.
-
-<div class="fake-img l-gutter">
-  <p>.l-gutter</p>
-</div>
-
-***
-
-## Other Typography?
-
-Emphasis, aka italics, with *asterisks* (`*asterisks*`) or _underscores_ (`_underscores_`).
-
-Strong emphasis, aka bold, with **asterisks** or __underscores__.
-
-Combined emphasis with **asterisks and _underscores_**.
-
-Strikethrough uses two tildes. ~~Scratch this.~~
-
-1. First ordered list item
-2. Another item
-⋅⋅* Unordered sub-list.
-1. Actual numbers don't matter, just that it's a number
-⋅⋅1. Ordered sub-list
-4. And another item.
-
-⋅⋅⋅You can have properly indented paragraphs within list items. Notice the blank line above, and the leading spaces (at least one, but we'll use three here to also align the raw Markdown).
-
-⋅⋅⋅To have a line break without a paragraph, you will need to use two trailing spaces.⋅⋅
-⋅⋅⋅Note that this line is separate, but within the same paragraph.⋅⋅
-⋅⋅⋅(This is contrary to the typical GFM line break behaviour, where trailing spaces are not required.)
-
-* Unordered list can use asterisks
-- Or minuses
-+ Or pluses
-
-[I'm an inline-style link](https://www.google.com)
-
-[I'm an inline-style link with title](https://www.google.com "Google's Homepage")
-
-[I'm a reference-style link][Arbitrary case-insensitive reference text]
-
-[I'm a relative reference to a repository file](../blob/master/LICENSE)
-
-[You can use numbers for reference-style link definitions][1]
-
-Or leave it empty and use the [link text itself].
-
-URLs and URLs in angle brackets will automatically get turned into links.
-http://www.example.com or <http://www.example.com> and sometimes
-example.com (but not on Github, for example).
-
-Some text to show that the reference links can follow later.
-
-[arbitrary case-insensitive reference text]: https://www.mozilla.org
-[1]: http://slashdot.org
-[link text itself]: http://www.reddit.com
-
-Here's our logo (hover to see the title text):
-
-Inline-style:
-![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 1")
-
-Reference-style:
-![alt text][logo]
-
-[logo]: https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png "Logo Title Text 2"
-
-Inline `code` has `back-ticks around` it.
-
-```javascript
-var s = "JavaScript syntax highlighting";
-alert(s);
-```
-
-```python
-s = "Python syntax highlighting"
-print s
-```
-
-```
-No language indicated, so no syntax highlighting.
-But let's throw in a <b>tag</b>.
-```
-
-Colons can be used to align columns.
-
-| Tables        | Are           | Cool  |
-| ------------- |:-------------:| -----:|
-| col 3 is      | right-aligned | $1600 |
-| col 2 is      | centered      |   $12 |
-| zebra stripes | are neat      |    $1 |
-
-There must be at least 3 dashes separating each header cell.
-The outer pipes (|) are optional, and you don't need to make the
-raw Markdown line up prettily. You can also use inline Markdown.
-
-Markdown | Less | Pretty
---- | --- | ---
-*Still* | `renders` | **nicely**
-1 | 2 | 3
-
-> Blockquotes are very handy in email to emulate reply text.
-> This line is part of the same quote.
-
-Quote break.
-
-> This is a very long line that will still be quoted properly when it wraps. Oh boy let's keep writing to make sure this is long enough to actually wrap for everyone. Oh, you can *put* **Markdown** into a blockquote.
-
-
-Here's a line for us to start with.
-
-This line is separated from the one above by two newlines, so it will be a *separate paragraph*.
-
-This line is also a separate paragraph, but...
-This line is only separated by a single newline, so it's a separate line in the *same paragraph*.
