fix embedded code?3

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -66,7 +66,7 @@ _styles: >
 
 Stephen King is one of the most prolific writers of our time. How has he managed to write more than 60 novels, and sell more than 400 million copies? Consistent and sustainable effort. As he recounted in "On Writing," the vast majority of his books weren't the result of 16-hour sprints. He follows one rule: to write for 4 hours a day, every day, no exceptions, like a stream carving out a canyon through hard rock. 
 
-{% include figure.html path="assets/img/onWriting.jpg" title="example" class="img-fluid rounded z-depth-1" %} 
+{% include figure.html path="assets/img/onWriting.jpg" title="example" class="img-fluid rounded " %} 
 <div class="caption">
     I highly recommend Stephen King's "On Writing." The lessons within are not writing-exclusive!
 </div>
@@ -76,7 +76,7 @@ You likely agree that exercise, healthy eating, a consistent sleep schedule, and
 ## I hear you. Counterpoint: TV
 
 Waking up an hour early to get a run in? Gross. It's raining. How about some hot chocolate instead? Now add a fuzzy blanket and some X-Files. 
-{% include figure.html path="assets/img/kronk.gif" title="example" class="img-fluid rounded z-depth-1" %}
+{% include figure.html path="assets/img/kronk.gif" title="example" class="img-fluid rounded " %}
 If only we had someone around to say hey man, I know it's raining outside, and you're not even sure you want to get into this whole cardio thing. But I'm gonna make it worth your while. Go do that run for me, and you can watch as much X-Files as you want.
 
 Ok, sounds pretty good. But what if I'm a good little optimizer, and I want to form as many habits as possible in as short a time as possible, without burning myself out and falling off the wagon of every last thing in an endless loop? And what if I don't want to run every day: I just want to run two days a week, and go to the gym the other two, and maybe do hot yoga the other two? It sucks keeping track of all this stuff every day! And another thing! If I'm being rewarded with endless X-Files, how am I going to have time for anything beyond exercise and X-Files?
@@ -99,7 +99,7 @@ First, you have to come up with a set of rewards for yourself. What's your favor
 <div class="row">
 
 <div class="col-sm">
-{% include figure.html path="assets/img/mineral.png" class="img-fluid rounded z-depth-1" %} 
+{% include figure.html path="assets/img/mineral.png" class="img-fluid rounded " %} 
 </div>
 </div>
 <div class="caption">
